--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "redux-actions": "^3.0.3",
     "redux-saga": "^1.3.0",
     "styled-components": "^6.1.13",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^5.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
