--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "wiyata-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "^14.5.2",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
     "axios": "^1.7.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -15,10 +18,11 @@
     "react-responsive": "^10.0.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^5.28.0",
     "redux-actions": "^3.0.3",
     "redux-saga": "^1.3.0",
     "styled-components": "^6.1.13",
-    "web-vitals": "^2.1.4",
+    "web-vitals": "^4.2.4",
     "zustand": "^5.0.2"
   },
   "scripts": {
